--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "test-app",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://prak-mtl.github.io/Routing-And-Drawing/index.html",
+  "homepage": "https://prak-mtl.github.io/Routing-And-Drawing",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.4.0",
